--- a/index.html
+++ b/index.html
@@ -1,3 +1,183 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <title>Materials Synthesis Laboratory | Inha Univ.</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* 메인 페이지 전용 박스 디자인 스타일 */
+        body { background-color: #f8f9fa; } 
+
+        .hero-banner {
+            width: 100%;
+            height: 320px;
+            background: linear-gradient(rgba(0, 58, 113, 0.75), rgba(0, 58, 113, 0.75)), url('images/banner_bg.jpg');
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            margin-bottom: 40px;
+        }
+        .hero-banner h1 { font-size: 2.8rem; font-weight: 900; letter-spacing: 1px; }
+        .hero-banner h1 span { color: #00bcd4; }
+
+        /* 섹션 박스화 레이아웃 */
+        .main-content-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 25px;
+            margin-bottom: 40px;
+        }
+        .content-box { 
+            background: #fff; 
+            border: 1px solid #e1e4e8; 
+            border-radius: 8px; 
+            padding: 25px; 
+            box-shadow: 0 4px 15px rgba(0,0,0,0.06); 
+            transition: transform 0.2s ease;
+        }
+        .content-box:hover { transform: translateY(-5px); }
+
+        .content-box-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 2px solid #003a71;
+            padding-bottom: 12px;
+            margin-bottom: 20px;
+        }
+        .content-box-header h3 { color: #003a71; margin: 0; font-size: 1.25rem; font-weight: 800; }
+        .btn-more { text-decoration: none; color: #00bcd4; font-size: 1.4rem; font-weight: bold; }
+
+        /* 공지사항 리스트 스타일 */
+        .notice-list { list-style: none; padding: 0; margin: 0; }
+        .notice-list li {
+            display: flex;
+            justify-content: space-between;
+            padding: 14px 0;
+            border-bottom: 1px solid #f0f0f0;
+        }
+        .notice-list li:last-child { border-bottom: none; }
+        .notice-list li a { text-decoration: none; color: #333; font-size: 0.95rem; transition: 0.2s; }
+        .notice-list li a:hover { color: #00bcd4; font-weight: bold; }
+        .notice-date { color: #999; font-size: 0.85rem; }
+
+        /* 갤러리 프리뷰 스타일 */
+        .gallery-link { display: flex; gap: 20px; text-decoration: none; color: inherit; }
+        .gallery-link img { width: 170px; height: 115px; object-fit: cover; border-radius: 5px; border: 1px solid #eee; }
+        .gallery-preview-text { flex: 1; }
+        .gallery-preview-text h4 { margin: 0 0 10px 0; color: #003a71; font-size: 1.15rem; line-height: 1.4; }
+        .gallery-preview-text p { font-size: 0.92rem; color: #666; line-height: 1.6; margin: 0; }
+        .gallery-preview-text strong { color: #333; display: block; margin-bottom: 5px; }
+
+        /* 하단 카드 링크 */
+        .link-cards {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 20px;
+            margin-bottom: 60px;
+        }
+        .card {
+            height: 150px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 8px;
+            color: white;
+            text-decoration: none;
+            font-size: 1.5rem;
+            font-weight: 800;
+            position: relative;
+            overflow: hidden;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        }
+        .card::before {
+            content: "";
+            position: absolute;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0, 58, 113, 0.65);
+            transition: 0.3s;
+        }
+        .card:hover::before { background: rgba(0, 188, 212, 0.75); }
+        .card span { position: relative; z-index: 1; }
+    </style>
+</head>
+<body>
+
+<header>
+    <nav>
+        <a href="index.html" class="logo"><img src="images/logo.png" alt="MSL Logo" height="50"></a>
+        <ul>
+            <li><a href="professor.html">PROFESSOR</a></li>
+            <li><a href="research.html">RESEARCH</a></li>
+            <li><a href="publications.html">PUBLICATIONS</a></li>
+            <li><a href="people.html">MEMBERS</a></li>
+            <li class="dropdown">
+                <a href="#">BOARD ▼</a>
+                <div class="dropdown-content">
+                    <a href="notice.html">Notice</a>
+                    <a href="gallery.html">Gallery</a>
+                    <a href="contact.html">Contact</a>
+                </div>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+<section class="hero-banner">
+    <h1><span>MATERIALS SYNTHESIS</span> LABORATORY</h1>
+</section>
+
+<div class="main-wrapper">
+    <div class="main-content-grid">
+        <div class="content-box">
+            <div class="content-box-header">
+                <h3>NOTICE</h3>
+                <a href="notice.html" class="btn-more">+</a>
+            </div>
+            <ul class="notice-list" id="notice-sync-list">
+                <li><a href="notice_view/notice_view_1.html">Loading...</a> <span class="notice-date"></span></li>
+                <li><a href="notice_view/notice_view_2.html">Loading...</a> <span class="notice-date"></span></li>
+                <li><a href="notice_view/notice_view_3.html">Loading...</a> <span class="notice-date"></span></li>
+            </ul>
+        </div>
+
+        <div class="content-box">
+            <div class="content-box-header">
+                <h3>GALLERY</h3>
+                <a href="gallery.html" class="btn-more">+</a>
+            </div>
+            <div id="gallery-sync-box">
+                <a href="gallery_view/gallery_view_1.html" class="gallery-link">
+                    <div style="padding: 20px; color: #999;">Updating content...</div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="link-cards">
+        <a href="research.html" class="card" style="background-image: url('images/card_research.jpg');"><span>RESEARCH</span></a>
+        <a href="publications.html" class="card" style="background-image: url('images/card_pub.jpg');"><span>PUBLICATIONS</span></a>
+        <a href="people.html" class="card" style="background-image: url('images/card_members.jpg');"><span>MEMBERS</span></a>
+    </div>
+</div>
+
+<footer>
+    <div class="footer-container">
+        <div class="footer-info">
+            <strong>인하대학교 재료합성연구실 &nbsp;&nbsp;MATERIALS SYNTHESIS LABORATORY </strong><br><br>
+            Department of Polymer Science and Engineering, Inha University<br>
+            669, Building 2, 100 Inha-ro, Michuhol-gu, Incheon 22212, Korea
+        </div>
+        <div style="text-align: right;">
+            Tel: +82-32-860-7114 (Lab)<br>
+            Copyright © 2026 MSL. All Rights Reserved.
+        </div>
+    </div>
+</footer>
+
 <script>
     async function syncContent() {
         const parser = new DOMParser();
@@ -63,3 +243,6 @@
 
     window.addEventListener('DOMContentLoaded', syncContent);
 </script>
+
+</body>
+</html>
