--- a/gallery.html
+++ b/gallery.html
@@ -98,29 +98,11 @@
         </ul>
     </nav>
 </header>
-
 <div class="main-wrapper">
     <h2 style="border-bottom: 2px solid #003a71; padding-bottom: 10px; color: #003a71;">GALLERY</h2>
 
-
-
-
-
     <div class="gallery-grid">
-
-
-
-        <a href="gallery_view/gallery_view_2.html" class="gallery-item">
-            <div class="gallery-thumbnail">
-                <img src="images/gallery/gallery_view_2.jpg" alt="gallery_view_2>
-            </div>
-            <div class="gallery-info">
-                <h3>제33회 한국반도체학술대회 (KCS 2026) 참석</h3>
-                <p class="gallery-date">2026-01-30</p>
-            </div>
-        </a>
-
-
+        
         <a href="gallery_view/gallery_view_1.html" class="gallery-item">
             <div class="gallery-thumbnail">
                 <img src="images/gallery/gallery_view_1.jpg" alt="gallery_view_1">
@@ -131,14 +113,19 @@
             </div>
         </a>
 
+        <a href="gallery_view/gallery_view_2.html" class="gallery-item">
+            <div class="gallery-thumbnail">
+                <img src="images/gallery/gallery_view_2.jpg" alt="gallery_view_2">
+            </div>
+            <div class="gallery-info">
+                <h3>제33회 한국반도체학술대회 (KCS 2026) 참석</h3>
+                <p class="gallery-date">2026-01-30</p>
+            </div>
+        </a>
+
+    </div> </div>
 
 
-
-
-
-
-    </div>
-</div>
 
 <footer>
     <div class="footer-container">
