--- a/publications_patents.html
+++ b/publications_patents.html
@@ -5,30 +5,30 @@
     <title>Publications - Patents | MSL Inha</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        .cv-section { margin-top: 40px; }
-        .cv-section h4 { 
+        /* 연도별 섹션 스타일 */
+        .year-section { margin-top: 50px; }
+        .year-header { 
+            font-size: 1.8rem; 
             color: #003a71; 
             border-bottom: 2px solid #003a71; 
-            padding-bottom: 10px; 
+            padding-bottom: 5px; 
             margin-bottom: 25px; 
-            font-size: 1.3rem;
             font-weight: 900;
         }
 
         .pub-list { list-style: none; padding: 0; margin-left: 5px; }
         .pub-list li { 
-            margin-bottom: 30px; 
+            margin-bottom: 25px; 
             position: relative;
             padding-left: 25px;
             border-bottom: 1px dotted #ddd;
-            padding-bottom: 20px;
+            padding-bottom: 15px;
         }
         .pub-list li::before {
             content: "▪";
             position: absolute;
-            left: 0;
-            top: 2px;
-            color: #003a71;
+            left: 0; top: 2px;
+            color: #00bcd4; /* 포인트 컬러 적용 */
             font-size: 1.2rem;
         }
 
@@ -38,7 +38,7 @@
             font-size: 1.05rem; 
             color: #000;
             margin-bottom: 6px;
-            line-height: 1.4;
+            line-height: 1.5;
         }
         .pub-authors { 
             display: block;
@@ -56,24 +56,7 @@
 </head>
 <body>
 <header>
-    <nav>
-        <a href="index.html" class="logo"><img src="images/logo.png" alt="MSL Logo" height="50"></a>
-        <ul>
-            <li><a href="professor.html">PROFESSOR</a></li>
-            <li><a href="research.html">RESEARCH</a></li>
-            <li><a href="publications.html">PUBLICATIONS</a></li>
-            <li><a href="people.html">MEMBERS</a></li>
-            <li class="dropdown">
-                <a href="#">BOARD ▼</a>
-                <div class="dropdown-content">
-                    <a href="notice.html">Notice</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="contact.html">Contact</a>
-                </div>
-            </li>
-        </ul>
-    </nav>
-</header>
+    </header>
 
 <div class="main-wrapper">
     <h2 style="border-bottom: 2px solid #003a71; padding-bottom: 10px; color: #003a71; font-weight: 900;">PUBLICATIONS</h2>
@@ -84,8 +67,8 @@
         <a href="publications_presentations.html" class="pub-tab">Presentations</a>
     </div>
 
-    <div class="cv-section">
-        <h4>Intellectual Properties</h4>
+    <div class="year-section">
+        <h4 class="year-header">2025</h4>
         <ul class="pub-list">
             <li>
                 <span class="pub-title">포토리소그래피용 언더레이어 화합물, 이를 이용하여 형성된 다층 구조 및 이를 이용한 반도체 소자의 제조방법</span>
@@ -102,6 +85,12 @@
                 <span class="pub-authors">이진균, 구예진, 김가영</span>
                 <span class="pub-info">한국, 등록, 1027569980000 (2025.01.15)</span>
             </li>
+        </ul>
+    </div>
+
+    <div class="year-section">
+        <h4 class="year-header">2024</h4>
+        <ul class="pub-list">
             <li>
                 <span class="pub-title">실리콘 함유 고불소화 고분자 포토레지스트 및 이를 이용한 유기전자소자의 제조방법</span>
                 <span class="pub-authors">이진균, 최승수, 김가영, 이정환, 이승택, 정병준, 이의호</span>
@@ -137,6 +126,12 @@
                 <span class="pub-authors">이준석, 유동주, 조성문, 이진균, 최승수</span>
                 <span class="pub-info">한국, 등록, 1026636880000 (2024.04.30)</span>
             </li>
+        </ul>
+    </div>
+
+    <div class="year-section">
+        <h4 class="year-header">2022</h4>
+        <ul class="pub-list">
             <li>
                 <span class="pub-title">레지스트 조성물 및 이를 사용한 패턴 형성 방법</span>
                 <span class="pub-authors">이진균, 구예진, 오현택</span>
@@ -152,256 +147,12 @@
                 <span class="pub-authors">이진균, 박춘희, 정병준, 최유민</span>
                 <span class="pub-info">한국, 등록, 1024162600000 (2022.06.29)</span>
             </li>
-            <li>
-                <span class="pub-title">레지스트 화합물, 이를 사용한 패턴 형성 방법, 및 이를 사용한 반도체 소자 제조 방법</span>
-                <span class="pub-authors">이진균, 문정석, 오현택</span>
-                <span class="pub-info">한국, 등록, 1023038330000 (2021.09.13)</span>
-            </li>
-            <li>
-                <span class="pub-title">고불소화 공중합체와 고불소계 용제를 이용한 적색 안료 분산체 및 이를 이용한 포토패터닝 방법</span>
-                <span class="pub-authors">이진균, 김미소, 김영태, 이용백, 유충근</span>
-                <span class="pub-info">한국, 등록, 1022915440000 (2021.08.12)</span>
-            </li>
-            <li>
-                <span class="pub-title">레지스트 화합물, 이를 사용한 패턴 형성 방법, 및 이를 사용한 반도체 소자 제조 방법</span>
-                <span class="pub-authors">이진균, 정석헌, 오현택</span>
-                <span class="pub-info">한국, 등록, 1022155110000 (2021.02.05)</span>
-            </li>
-            <li>
-                <span class="pub-title">우수한 분산 안정성을 갖는 안료 분산액, 이의 제조방법, 및 이를 이용한 포토패터닝 방법</span>
-                <span class="pub-authors">이진균, 안진영, 김영태</span>
-                <span class="pub-info">한국, 등록, 1022072850000 (2021.01.19)</span>
-            </li>
-            <li>
-                <span class="pub-title">스피로피란 구조를 포함하는 고불소화 고분자 포토레지스트 및 이를 이용한 유기전자소자의 제조방법</span>
-                <span class="pub-authors">이진균, 손종찬, 박근우, 정병준, 최유민, 신한영</span>
-                <span class="pub-info">한국, 등록, 1022072860000 (2021.01.19)</span>
-            </li>
-            <li>
-                <span class="pub-title">고불소화 공중합체 및 고불소계 용제를 이용한 안료 분산체 및 이를 이용한 포토패터닝 방법</span>
-                <span class="pub-authors">이진균, 김영태, 김미소, 안진영, 유충근, 이용백</span>
-                <span class="pub-info">한국, 등록, 1021789760000 (2020.11.09)</span>
-            </li>
-            <li>
-                <span class="pub-title">생체 적합성 유기용매를 사용하여 제조된 양친성 하이드로젤-패브릭 복합체 지혈 상처 드레싱</span>
-                <span class="pub-authors">이진균, 이진현, 김영태, 나양호, 황선호, 남용</span>
-                <span class="pub-info">한국, 등록, 1021209540000 (2020.06.03)</span>
-            </li>
-            <li>
-                <span class="pub-title">고불소계 용제에 용해성을 가지는 고불소화 단분자 포토레지스트 및 고불소화 아민 유도체를 이용한 포지티브형 포토레지스트의 제조</span>
-                <span class="pub-authors">이진균, 강새은, 손종찬, 원종인</span>
-                <span class="pub-info">한국, 등록, 1021141170000 (2020.05.18)</span>
-            </li>
-            <li>
-                <span class="pub-title">고불소계 용제에 용해성을 가지는 고불소화 고분자를 포함하는 레지스트 재료</span>
-                <span class="pub-authors">이진균, 정석헌</span>
-                <span class="pub-info">한국, 등록, 1021141160000 (2020.05.18)</span>
-            </li>
-            <li>
-                <span class="pub-title">폴리메틸하이드로실록산 표면 도포 기법을 이용한 폴리디메틸실록산의 표면 개질 방법 및 이로 제조된 폴리디메틸실록산</span>
-                <span class="pub-authors">이진균, 손종찬, 이은혜, 임강혁, 이진영</span>
-                <span class="pub-info">한국, 등록, 1020180024500 (2018.02.28)</span>
-            </li>
-            <li>
-                <span class="pub-title">첨가제를 포함하는 고불소화 포토레지스트용 불소계 현상 용매 및 이를 이용한 유기 발광 다이오드 디스플레이 제조방법</span>
-                <span class="pub-authors">이진균, 손종찬, 정병준, 채승근, 배준한</span>
-                <span class="pub-info">한국, 등록, 1020790160000 (2020.02.13)</span>
-            </li>
-            <li>
-                <span class="pub-title">친수성 표면개질제를 이용한 소수성 고분자 메쉬의 표면개질 및 우레탄 코팅을 통한 표면처리 방법</span>
-                <span class="pub-authors">이진균, 이철균, 박준범</span>
-                <span class="pub-info">한국, 등록, 1019231810000 (2018.11.22)</span>
-            </li>
-            <li>
-                <span class="pub-title">안트라센-퍼플루오르폴리에테르 기반의 초발수성 표면 처리제 및 이를 이용한 PET 섬유의 초발수성 표면 처리방법</span>
-                <span class="pub-authors">이진균, 김종민</span>
-                <span class="pub-info">한국, 등록, 1017938640000</span>
-            </li>
-            <li>
-                <span class="pub-title">소수성 고분자 메쉬용 친수성 개질제 및 소수성 고분자 메쉬의 표면 개질 방법</span>
-                <span class="pub-authors">이진균, 이철균, 김종민, 박준범, 박한울</span>
-                <span class="pub-info">한국, 등록, 1017732940000</span>
-            </li>
-            <li>
-                <span class="pub-title">높은 유리전이온도를 가지고 고불소계 용제에 용해되는 고불소화 고분자 화합물</span>
-                <span class="pub-authors">이진균, 정석헌</span>
-                <span class="pub-info">한국, 출원, 10-2017-0085451</span>
-            </li>
-            <li>
-                <span class="pub-title">고불소계 용제로 가공이 가능한 고불소화 포지티브형 포토레지스트 및 이를 이용한 유기전자소자의 제조방법</span>
-                <span class="pub-authors">이진균, 손종찬, 정석헌, 정병준, 배준한</span>
-                <span class="pub-info">한국, 출원, 10-2017-0127424</span>
-            </li>
-            <li>
-                <span class="pub-title">고불소계 용제로 가공이 가능한 고불소화 포지티프형 전자선 레지스트</span>
-                <span class="pub-authors">이진균, 정석헌, 손종찬</span>
-                <span class="pub-info">한국, 출원, 10-2017-0145329</span>
-            </li>
-            <li>
-                <span class="pub-title">기계적 연마 공정을 이용한 리프트-오프 패턴 형성방법</span>
-                <span class="pub-authors">이진균, 손종찬</span>
-                <span class="pub-info">Korea Patent, 공개, 1020170123113</span>
-            </li>
-            <li>
-                <span class="pub-title">좁은 분자량 분포를 가지는 고불소화 포토레지스트 고분자를 이용한 유기발광 다이오드 소자 제조방법</span>
-                <span class="pub-authors">이진균, 손종찬, 이아름, 박혜진</span>
-                <span class="pub-info">Korea Patent, 등록, 10-1784104</span>
-            </li>
-            <li>
-                <span class="pub-title">플렉시블 유기 전계 효과 트랜지스터의 제조 방법</span>
-                <span class="pub-authors">이탁희, 장진곤, 이진균</span>
-                <span class="pub-info">Korea, 등록, 10-1533822-0000</span>
-            </li>
-            <li>
-                <span class="pub-title">전도성 접착제 필름의 제조방법 및 이에 따라 제조되는 전도성 접착제 필름</span>
-                <span class="pub-authors">S. -G. Park, J.-K. Lee, M.-S. Kim, S.-H. Jung, D.-H. Lee</span>
-                <span class="pub-info">Korea, 10-1636450</span>
-            </li>
-            <li>
-                <span class="pub-title">센서용 전극의 제조방법 및 이에 따라 제조되는 센서</span>
-                <span class="pub-authors">S. -G. Park, J.-K. Lee, M.-S. Kim, S.-H. Jung, D.-H. Lee</span>
-                <span class="pub-info">Korea, 10-1651108</span>
-            </li>
-            <li>
-                <span class="pub-title">전도성 패턴의 제조방법 및 이에 따라 제조되는 전도성 패턴</span>
-                <span class="pub-authors">S. -G. Park, J.-K. Lee, M.-S. Kim, S.-H. Jung, S,-H. Hwang, J.-S. Yeo, M.-J. Kwon, K.-H. Lee</span>
-                <span class="pub-info">Korea, 10-1649557</span>
-            </li>
-            <li>
-                <span class="pub-title">딘-스탁 트랩을 이용한 그래핀 분산액 제조방법</span>
-                <span class="pub-authors">M. Y. Song, M. E. Lee, S.-H. Jung, J.-K. Lee, H.-J. Jin</span>
-                <span class="pub-info">Korea, 10-2016-0088585</span>
-            </li>
-            <li>
-                <span class="pub-title">스트레인 게이지의 제조방법 및 이에 따라 제조된 스트레인 게이지</span>
-                <span class="pub-authors">박세근, 이진균, 김명수, 이다혁, 정석헌</span>
-                <span class="pub-info">Korea Patent, 등록, 10-1665037-0000</span>
-            </li>
-            <li>
-                <span class="pub-title">고분자 기반 초흡습성 코팅 조성물 및 그 이용</span>
-                <span class="pub-authors">유윤호, 이진균</span>
-                <span class="pub-info">Korea Patent, 등록, 10-1745410-0000</span>
-            </li>
-            <li>
-                <span class="pub-title">불소계 박막이 형성된 조명소자 및 이의 제조 방법</span>
-                <span class="pub-authors">박세근, 이진균, 이다혁, 김명수, 정석헌</span>
-                <span class="pub-info">Korea Patent, 출원, 10-2015-0176915</span>
-            </li>
-            <li>
-                <span class="pub-title">항균 소재 및 이의 제조 방법</span>
-                <span class="pub-authors">박세근, 이진균, 김명수, 이다혁, 정석헌</span>
-                <span class="pub-info">Korea Patent, 출원, 10-2015-0177385</span>
-            </li>
-            <li>
-                <span class="pub-title">터치스크린 패널의 제조방법 및 이에 따라 제조되는 터치스크린 패널</span>
-                <span class="pub-authors">박세근, 김명수, 이다혁, 이진균, 정석헌</span>
-                <span class="pub-info">Korea Patent, Filled, 10-2015-0020079</span>
-            </li>
-            <li>
-                <span class="pub-title">나노 물질 패턴의 제조방법</span>
-                <span class="pub-authors">박세근, 김명수, 이진균, 정석헌</span>
-                <span class="pub-info">Korea Patent, Filled, 10-2014-0077599</span>
-            </li>
-            <li>
-                <span class="pub-title">고유전율 절연재료의 제조방법 및 이를 포함하는 다이오드소자</span>
-                <span class="pub-authors">이진균, 김희진, 김영태, 박태승</span>
-                <span class="pub-info">Korea Patent, Filled, 10-2014-0145086</span>
-            </li>
-            <li>
-                <span class="pub-title">발열 기판의 제조방법 및 이에 따라 제조되는 발열 기판</span>
-                <span class="pub-authors">박세근, 김명수, 이진균, 정석헌, 이다혁</span>
-                <span class="pub-info">Korea Patent, Filled, 10-2014-0194212</span>
-            </li>
-            <li>
-                <span class="pub-title">직물-하이드로겔 복합분리막 및 직물-하이드로겔 복합분리막을 이용한 미세조류 배양방법</span>
-                <span class="pub-authors">이진균, 이철균, 이승용</span>
-                <span class="pub-info">Korea Patent, Filled, 10-2014-0063659</span>
-            </li>
-            <li>
-                <span class="pub-title">나노 물질 패턴의 제조방법</span>
-                <span class="pub-authors">박세근, 이다혁, 이진균, 정석헌</span>
-                <span class="pub-info">Korea Patent, 10-1588290</span>
-            </li>
-            <li>
-                <span class="pub-title">초소수성 박막의 제조방법 및 이를 통해 제조된 초소수성 박막</span>
-                <span class="pub-authors">박세근, 이다혁, 이진균, 정석헌</span>
-                <span class="pub-info">Korea Patent, Filled, 10-2014-0166294</span>
-            </li>
-            <li>
-                <span class="pub-title">패턴된 소수성 박막을 이용한 엘이디 패키지용 렌즈 형성 방법</span>
-                <span class="pub-authors">박세근, 이진균, 김명수</span>
-                <span class="pub-info">Korea Patent, Filled, 10-2013-0157031</span>
-            </li>
-            <li>
-                <span class="pub-title">패턴의 형성방법</span>
-                <span class="pub-authors">박세근, 이진균, 김명수</span>
-                <span class="pub-info">Korea Patent, Filled, 10-2013-0157035</span>
-            </li>
-            <li>
-                <span class="pub-title">포토레지스트용 스트리퍼 조성물 및 이를 이용한 표시장치의 제조방법</span>
-                <span class="pub-authors">정병준, 김영미, 허준영, 이연경, 박용민, 이진균</span>
-                <span class="pub-info">Korea Patent, 출원, 10-2013-0147549</span>
-            </li>
-            <li>
-                <span class="pub-title">용액공정을 통한 양자점 발광재료의 제조방법 및 상기 양자점 발광재료를 이용한 발광소자</span>
-                <span class="pub-authors">이진균, 김대영, 이창희, 박명진</span>
-                <span class="pub-info">Korea Patent, Filled, 10-2013-0120041</span>
-            </li>
-            <li>
-                <span class="pub-title">고유전율 절연재료의 제조방법 및 상기 고유전율 절연재료를 이용한 절연소자</span>
-                <span class="pub-authors">이진균, 지중휘</span>
-                <span class="pub-info">Korea Patent, Filled, 10-2013-0119237</span>
-            </li>
-            <li>
-                <span class="pub-title">포토레지스트 조성물 및 이를 이용한 유기전계발광표시장치의 제조방법</span>
-                <span class="pub-authors">황도훈, 김영미, 윤종근, 허준영, 도의두, 이연경, 이창희, 이진균, 임종민, 김지훈, 정병준</span>
-                <span class="pub-info">Korea Patent, 등록, 10-1400390-0000</span>
-            </li>
-            <li>
-                <span class="pub-title">광이합체화 반응을 이용하는 포토레지스트 및 이를 이용한 유기발광 다이오드 표시장치 제조 방법</span>
-                <span class="pub-authors">이진균, 김수현, 김영미, 윤종근, 허준영, 도의두, 이연경</span>
-                <span class="pub-info">Korea Patent, 등록, 10-1420527-0000</span>
-            </li>
-            <li>
-                <span class="pub-title">Orthogonal Processing of Organic Materials Used in Electronic and Electrical Devices</span>
-                <span class="pub-authors">Christopher K. Ober, George Malliaras, Jin-Kyun Lee, Alexander Zakhidov, Margarita Chatzichristidi, Priscilla Dodson</span>
-                <span class="pub-info">US Patent, Filled 9231211, 2015</span>
-            </li>
-            <li>
-                <span class="pub-title">Method for fabrication pattern of nano material</span>
-                <span class="pub-authors">Se-Geun Park, Jin-Kyun Lee, Myung-Soo Kim, Seok-Heon Jung</span>
-                <span class="pub-info">US Patent, Filled 9147791, 2015</span>
-            </li>
-            <li>
-                <span class="pub-title">Orthogonal processing of organic materials used in electronic and electrical devices</span>
-                <span class="pub-authors">Christopher K. Ober, George Malliaras, Jin-Kyun Lee, Alexander Zakhidov, Margarita Chatzichristidi, Priscilla Dodson</span>
-                <span class="pub-info">US Patent, Filled 8846301, 2014</span>
-            </li>
-            <li>
-                <span class="pub-title">Method for forming a multicolor OLED device</span>
-                <span class="pub-authors">Jin-Kyun Lee, Alexander Zakhidov, John DeFranco</span>
-                <span class="pub-info">US Patent, Filled 8871545, 2014</span>
-            </li>
-            <li>
-                <span class="pub-title">Methods of making patterned structures of materials, patterned structures of materials, and methods …</span>
-                <span class="pub-authors">Evan L. Schwartz, Wei Min Chan, Jin-Kyun Lee, Sandip Tiwari, Christopher K. Ober</span>
-                <span class="pub-info">US Patent, Filled 20140205818, 2012</span>
-            </li>
-            <li>
-                <span class="pub-title">Patterning of biomaterials using fluorinated materials and fluorinated solvents</span>
-                <span class="pub-authors">Christopher Ober, Jin-Kyun Lee, Priscilla G. Taylor</span>
-                <span class="pub-info">US Patent, Filled 09259759, 2011</span>
-            </li>
-            <li>
-                <span class="pub-title">Method for forming an organic device</span>
-                <span class="pub-authors">Jin-Kyun Lee, Alexander Zakhidov, John Defranco</span>
-                <span class="pub-info">US Patent, Filled 20140322850, 2011</span>
-            </li>
-            <li>
-                <span class="pub-title">Method for forming a multicolor OLED device</span>
-                <span class="pub-authors">Jin-Kyun Lee, Alexander Zakhidov, John DeFranco</span>
-                <span class="pub-info">US Patent, Filled 8871545, 2011</span>
-            </li>
+        </ul>
+    </div>
+
+    <div class="year-section" style="padding-bottom: 80px;">
+        <h4 class="year-header">2010</h4>
+        <ul class="pub-list">
             <li>
                 <span class="pub-title">Methods of making patterned structures of fluorine-containing polymeric materials and fluorine-conta…</span>
                 <span class="pub-authors">Christopher Ober, George Malliaras, Jin-Kyun Lee, Hon Hang Fong</span>
@@ -412,17 +163,6 @@
 </div>
 
 <footer>
-    <div class="footer-container">
-        <div class="footer-info">
-            <strong>인하대학교 재료합성연구실 &nbsp;&nbsp;MATERIALS SYNTHESIS LABORATORY </strong><br><br>
-            Department of Polymer Science and Engineering, Inha University<br>
-            669, Building 2, 100 Inha-ro, Michuhol-gu, Incheon 22212, Korea
-        </div>
-        <div style="text-align: right;">
-            Tel: +82-32-860-7114<br>
-            Copyright © 2026 MSL. All Rights Reserved.
-        </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
