--- a/research.html
+++ b/research.html
@@ -97,11 +97,6 @@
 <div class="main-wrapper">
     <h2 style="border-bottom: 2px solid #003a71; padding-bottom: 10px; color: #003a71; font-weight: 900;">RESEARCH</h2>
 
-    <div class="pub-tabs">
-        <a href="research.html" class="pub-tab active">Next-gen Lithography</a>
-        <a href="research_topic2.html" class="pub-tab">Advanced Polymers</a>
-        <a href="research_topic3.html" class="pub-tab">Organic Electronics</a>
-    </div>
 
     <div class="cv-section">
         <h4>Core Research Areas</h4>
@@ -110,13 +105,10 @@
                 <img src="images/research_1.jpg" alt="EUV Lithography Research Illustration">
             </div>
 
-            <div class="research-text-box">
-                <strong>EUV (Extreme Ultraviolet) Resist Materials</strong>
- 
+
                 <div class="keywords-bar">
-                    Keywords: <span>EUV, Photoresist, Underlayer, Semiconductor, Polymer Synthesis, Lithography</span>
+                    Keywords: <span>EUV resist, Lithography, Fluorinated Materials, Polymer Synthesis </span>
                 </div>
-            </div>
         </div>
     </div>
 </div>
