--- a/gallery_view/gallery_view_2.html
+++ b/gallery_view/gallery_view_2.html
@@ -80,7 +80,7 @@
             </div>
             
             <div class="cv-content">
-                <strong>학술적 교류와 팀워크를 다진 뜻깊은 시간</strong>
+                <strong>학술적 교류 및 팀워크 증진</strong>
                 <p>
                     2026년 1월 27일부터 30일까지 강원도 정선 하이원 리조트에서 개최된 제33회 한국반도체학술대회에 참석하였습니다.<br><br>
 
