갤러리 업로드

--- a/gallery.html
+++ b/gallery.html
@@ -126,6 +126,61 @@
         </a>
 
 
+        <a href="gallery_view/gallery_view_905.html" class="gallery-item">
+            <div class="gallery-thumbnail">
+                <img src="images/gallery/gallery_view_905.jpg" alt="gallery_view_905">
+            </div>
+            <div class="gallery-info">
+                <h3>2024 홈커밍데이</h3>
+                <p class="gallery-date">2024-12-02</p>
+            </div>
+        </a>
+
+
+        <a href="gallery_view/gallery_view_904.html" class="gallery-item">
+            <div class="gallery-thumbnail">
+                <img src="images/gallery/gallery_view_904.jpg" alt="gallery_view_904">
+            </div>
+            <div class="gallery-info">
+                <h3>2023년도 디스플레이 국가연구개발사업 총괄워크샵 산업통상자원부장관 표창장 수상</h3>
+                <p class="gallery-date">2023-11-27</p>
+            </div>
+        </a>
+
+
+        <a href="gallery_view/gallery_view_903.html" class="gallery-item">
+            <div class="gallery-thumbnail">
+                <img src="images/gallery/gallery_view_903.jpg" alt="gallery_view_903">
+            </div>
+            <div class="gallery-info">
+                <h3>2017 ASML Tech talk 교수님 수상 사진</h3>
+                <p class="gallery-date">2017-11-08</p>
+            </div>
+        </a>
+
+
+        <a href="gallery_view/gallery_view_902.html" class="gallery-item">
+            <div class="gallery-thumbnail">
+                <img src="images/gallery/gallery_view_902.jpg" alt="gallery_view_902">
+            </div>
+            <div class="gallery-info">
+                <h3>2017 홈커밍데이</h3>
+                <p class="gallery-date">2017-11-08</p>
+            </div>
+        </a>
+
+
+        <a href="gallery_view/gallery_view_901.html" class="gallery-item">
+            <div class="gallery-thumbnail">
+                <img src="images/gallery/gallery_view_901.jpg" alt="gallery_view_901">
+            </div>
+            <div class="gallery-info">
+                <h3>2016 홈커밍데이</h3>
+                <p class="gallery-date">2026-08-07</p>
+            </div>
+        </a>
+
+
 
     </div> </div>
 
