--- a/index.html
+++ b/index.html
@@ -190,23 +190,25 @@
 
 <div class="main-wrapper">
     
-    <div class="latest-pub-container">
+<div class="latest-pub-container">
         <div class="content-box-header">
             <h3>LATEST PUBLICATION</h3>
             <a href="publications.html" class="btn-more">+</a>
         </div>
-        <a href="https://doi.org/10.1021/acs.orglett.XXXXXXX" target="_blank" class="pub-highlight-box">
+        <a href="https://pubs.acs.org/doi/10.1021/acs.orglett.5c04299" target="_blank" class="pub-highlight-box">
             <div class="pub-img-side">
-                <img src="images/latest_paper.jpg" alt="Organic Letters Paper First Page">
+                <img src="images/latest_paper.jpg" alt="Organic Letters 2026 Paper First Page">
             </div>
             <div class="pub-info-side">
-                <span class="pub-journal">Organic Letters</span>
+                <span class="pub-journal">Organic Letters (2026)</span>
                 <h4 class="pub-title-main">Synergistic Fluoroalkyl and Electron-Rich Vinyl Units for Ionizing Radiation-Induced Cross-Linking</h4>
-                <p class="pub-authors-main">Gayoung Kim, Jinseok Lee, and Jin-Kyun Lee*</p>
-                <p class="pub-desc">
-                    본 연구는 이온화 방사선 유도 가교 결합을 위한 불소화 알킬 및 전자 풍부 비닐 단위의 시너지 효과를 탐구합니다. 
-                    차세대 리소그래피 공정에서 고해상도 패턴 형성을 위한 고성능 레지스트 소재의 새로운 설계 원리를 제시합니다.
+                <p class="pub-authors-main" style="line-height: 1.6;">
+                    Gayoung Kim, Yejin Ku, Sung-Wook Hwang, <strong>Jin-Kyun Lee*</strong>, Jiho Kim, Sangsul Lee, Yu Ha Jang, Seohyeon Lee, Byung Jun Jung, Chawon Koh, Tsunehiro Nishi, and Hyun-Woo Kim
                 </p>
+                <div style="margin-top: 20px; border-top: 1px solid #f0f0f0; padding-top: 15px;">
+                    <span class="notice-date">Published: January 20, 2026</span>
+                    <span style="margin-left: 20px; color: #00bcd4; font-size: 0.85rem; font-weight: bold;">DOI: 10.1021/acs.orglett.5c04299</span>
+                </div>
             </div>
         </a>
     </div>
