--- a/publications.html
+++ b/publications.html
@@ -98,11 +98,19 @@
         <div class="year-section">
             <span class="year-label">2026</span>
             <ul class="pub-list">
+
+                <li>
+                    <span class="pub-title">Synergistic Fluoroalkyl and Electron-Rich Vinyl Units for Ionizing Radiation-Induced Cross-Linking</span>
+                    <span class="pub-authors">Gayoung Kim, Yejin Ku, Sung-Wook Hwang, Jin-Kyun Lee*, Jiho Kim, Sangsul Lee, Yu Ha Jang, Seohyeon Lee, Byung Jun Jung, Chawon Koh, Tsunehiro Nishi, and Hyun-Woo Kim</span>
+                    <span class="pub-info"><span class="pub-journal">Org. Lett.</span>, 2026, 28, 5, 1505-1509,</span>
+                </li>
+
                 <li>
                     <span class="pub-title">Water-Processable PVA-SbQ as an Eco-Friendly Photoreversible Dual-Tone Photoresist for Advanced Lithography</span>
                     <span class="pub-authors">Hyun-Jin Kim, Jun Ho Eom, Min-Jung Park, Su-Yeon Cho, Je Moon Yun, Gayoung Kim, Jin-Kyun Lee, Jae-Hak Choi, Ramakrishnan Ganesan</span>
                     <span class="pub-info"><span class="pub-journal">Chem. Asian J.</span>, 2026, 21(1), e70549</span>
                 </li>
+
             </ul>
         </div>
 
